<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="UDT_DelayData_RD" Id="{98c62af2-1927-4817-b8d7-8aec53744a93}">
    <Declaration><![CDATA[TYPE UDT_DelayData_RD :
STRUCT
setTime               : TIME; // 延时Data
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>