<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="UDT_DelayVar_RD" Id="{95cb192e-e4a4-4f32-95a9-649524e3b526}">
    <Declaration><![CDATA[TYPE UDT_DelayVar_RD :
STRUCT
input               : BOOL; // 延时开始
isOn                : BOOL; // On延时输出
actTime             : TIME; // 当前计时时间
stationNo           : UINT; // 所属工站编号
serialNo            : UINT; // HMI显示序号
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>